@@ -1,15 +1,21 @@
 # Projekt Amber - doskonalenie i rozwój języka
+
 ![project-amber-timeline.png](img%2Fproject-amber-timeline.png)
 ![java22-arrival.png](img%2Fjava22-arrival.png)
-- Źródło: https://openjdk.org/projects/amber/ 
-- Przykłady: https://www.happycoders.eu/java/ ([cheatsheet w pdf](tmp%2Fjava-versions-cheat-sheet-happycoders.eu-v22.0.3.pdf))
 
+- Źródło: https://openjdk.org/projects/amber/
+-
+
+Przykłady: https://www.happycoders.eu/java/ ([cheatsheet w pdf](tmp%2Fjava-versions-cheat-sheet-happycoders.eu-v22.0.3.pdf))
 
 ## Inferencja typów z użyciem `var` (ang. Local-Variable Type Inference `var`)
-Inferencja typów – mechanizm w językach statycznie typowanych, w którym kompilator określa typ danych na podstawie informacji dostępnych w czasie 
+
+Inferencja typów – mechanizm w językach statycznie typowanych, w którym kompilator określa typ danych na podstawie
+informacji dostępnych w czasie
 kompilacji, np. typów zadeklarowanych wcześniej lub określania typów na podstawie wartości już znanych zmiennych.
 
-Od java10: 
+Od java10:
+
 ```java
 var list = new ArrayList<String>();  // infers ArrayList<String>
 var stream = list.stream();          // infers Stream<String>
@@ -19,49 +25,86 @@ var stream = list.stream();          // infers Stream<String>
 List<String> names = new ArrayList<>();
 // ^ developers complain about degree of boilerplate code
 //var names = new ArrayList<>();
-names.add("aa");
-names.add("bb");
-names.add("cc");
+names.
+
+add("aa");
+names.
+
+add("bb");
+names.
+
+add("cc");
 //names.add(2);
-System.out.println(names);
+System.out.
+
+println(names);
 ```
-Ograniczenia: 
+
+Ograniczenia:
+
 ```java
 //it won't work, it causes:  "cannot infer type for local variable x"
 var x;
 var x = null;
-var x = { 1 , 2 };
+var x = {1, 2};
 ```
 
 ## Fabryka niemodyfikowalnych (ang. immutable) kolekcji
+
 Przed java9:
+
 ```java
 List<String> names = new ArrayList<>();
-names.add("aa");
-names.add("bb");
-names.add("cc");
+names.
+
+add("aa");
+names.
+
+add("bb");
+names.
+
+add("cc");
+
 List<String> unmodifiableList = Collections.unmodifiableList(names);
-unmodifiableList.add("zz");
+unmodifiableList.
+
+add("zz");
 ```
+
 Od java9 (przydatne dla kolekcji z małą, niemodyfikowalną liczbą elementów), działa dla `List`, `Set` oraz `Map`:
+
 ```java
 List<String> newUmodificableList = List.of("aa", "bb", "cc");
-newUmodificableList.add("zz");
+newUmodificableList.
+
+add("zz");
 ```
 
 ## Niemutowalne kolekcje zwracane z użyciem `stream()`
+
 ```java
 List<String> names = new ArrayList<>();
-names.add("aa");
-names.add("bb");
-names.add("cc");
+names.
+
+add("aa");
+names.
+
+add("bb");
+names.
+
+add("cc");
+
 List<String> listFromStream = names.stream().collect(Collectors.toUnmodifiableList());
-listFromStream.add("zzz");
+listFromStream.
+
+add("zzz");
+
 //From java16
 List<String> listFromStream_v2 = names.stream().toList();
 ```
 
 ## Rozwój `Optional`
+
 Przed java10, należało użyć metody `isPresent`, bo inaczej narażalismy się na wyjątek `NoSuchElementException`
 oraz ostrzeżenie (warning). Po dodaniu `orElseThrow`, "zapachy kodu" jest lepsze:
 
@@ -69,7 +112,7 @@ oraz ostrzeżenie (warning). Po dodaniu `orElseThrow`, "zapachy kodu" jest lepsz
 public static void main(String[] args) {
     Optional<String> result = getResult();
     //before orElseThrow
-    if(result.isPresent()) {
+    if (result.isPresent()) {
         String s = result.get();
         System.out.println(s);
     }
@@ -85,7 +128,9 @@ private static Optional<String> getResult() {
 ```
 
 ## Uproszczenie API do operacji na plikach
+
 Wczytywanie i zapisywanie plików (od java11):
+
 ```java
 public static void main(String[] args) throws IOException {
 
@@ -100,6 +145,7 @@ public static void main(String[] args) throws IOException {
 ```
 
 ## Nowe metody dla klasy `String` (łancuch znaków)
+
 ```java
 // repeat
 String repeat = "ha".repeat(20);
@@ -130,22 +176,44 @@ List<String> transformed = "Ola\nKasia\nZosia".transform(e -> e.lines().toList()
 // splitWithDelimiters (java21)
 String[] splitWithDelimiters = "Long::brown::curly::hair".splitWithDelimiters("::", 3);
 ```
-## Bloki tekstowe
-Reprezentacja jsona/sql/xml itp
-```json
-{"menu": {
-  "id": "file",
-  "value": "File",
-  "popup": {
-    "menuitem": [
-      {"value": "New", "onclick": "CreateNewDoc()"},
-      {"value": "Open", "onclick": "OpenDoc()"},
-      {"value": "Close", "onclick": "CloseDoc()"}
-    ]
-  }
-}}
+
+### Emoji
+
+```java
+String welcomeMsg = "Hey Java Developers! 🙋🏻‍♂️";
 ```
+
+## Bloki tekstowe
+
+Reprezentacja jsona/sql/xml itp
+
+```json
+{
+  "menu": {
+    "id": "file",
+    "value": "File",
+    "popup": {
+      "menuitem": [
+        {
+          "value": "New",
+          "onclick": "CreateNewDoc()"
+        },
+        {
+          "value": "Open",
+          "onclick": "OpenDoc()"
+        },
+        {
+          "value": "Close",
+          "onclick": "CloseDoc()"
+        }
+      ]
+    }
+  }
+}
+```
+
 Przed java15:
+
 ```java
 String mrJson = "{\"menu\": {\n" +
         "  \"id\": \"file\",\n" +
@@ -159,7 +227,9 @@ String mrJson = "{\"menu\": {\n" +
         "  }\n" +
         "}}";
 ```
+
 Po java15:
+
 ```java
 String mrJsonSincejava15 = """
         {"menu": {
@@ -178,7 +248,9 @@ List<String> list = mrJsonSincejava15.lines().toList();
 ```
 
 ## Dopasowanie wzorca z użyciem `instanceof` (ang. Pattern Matching for `instanceof` )
+
 Przed java16:
+
 ```java
 public static void main(String[] args) {
 
@@ -198,7 +270,9 @@ private static Object getObject() {
     return "I am string now";
 }
 ```
+
 W powyższym snippecie dzieją się aż 3 rzeczy
+
 1. testowanie czy `obj` jest typu  `String` lub `Integer`
 2. deklarowanie nowych zmiennych `s` lub `i`
 3. kastowanie obiektu na typ `String` lub `Integer`
@@ -221,7 +295,9 @@ private static Object getObject() {
 ```
 
 ## Wyrażenie `switch` oraz ewolucja przez kolejne wydania
+
 Do java7 włącznie, tylko liczby całkowite (`int`) mogły być używane:
+
 ```java
 public static void main(String[] args) {
     switchEvolution(5);
@@ -241,7 +317,9 @@ private static void switchEvolution(int value) {
     }
 }
 ```
+
 Od java8 dodano możliwość użycia `String` oraz `enum`
+
 ```java
 public static void main(String[] args) {
     switchEvolution("Monday");
@@ -276,7 +354,10 @@ private static void switchEvolution(String day) {
     }
 }
 ```
-Od java13 mozemy zwrócić bezpośrednio z uzyciem słowa kluczowego `yield` (w java12 było to `break`, ale tylko jako preview): 
+
+Od java13 mozemy zwrócić bezpośrednio z uzyciem słowa kluczowego `yield` (w java12 było to `break`, ale tylko jako
+preview):
+
 ```java
 public static void main(String[] args) {
     System.out.println(switchEvolution("Monday"));
@@ -304,7 +385,9 @@ private static String switchEvolution(String day) {
     };
 }
 ```
+
 Lub od java12 z wykorzystaniem operatora strzałki `->`
+
 ```java
 private static String switchEvolution(String day) {
     return switch (day) {
@@ -319,17 +402,21 @@ private static String switchEvolution(String day) {
     };
 }
 ```
+
 Od java12, można było grupować opcje:
+
 ```java
     private static String switchEvolution(String day) {
-        return switch (day) {
-            case "Monday", "Tuesday", "Wednesday", "Thursday", "Friday" -> "Week day";
-            case "Saturday", "Sunday" -> "Weekend";
-            default -> "Unknown";
-        };
-    }
+    return switch (day) {
+        case "Monday", "Tuesday", "Wednesday", "Thursday", "Friday" -> "Week day";
+        case "Saturday", "Sunday" -> "Weekend";
+        default -> "Unknown";
+    };
+}
 ```
+
 Teraz dopiero zaczyna się ból głowy, bo dokładamy "pattern matching"... (dorzucone w java17 jako "preview")
+
 ```java
 public static void main(String[] args) {
     switchEvolution("Hello from new switch expression and pattern matching");
@@ -346,7 +433,9 @@ private static void switchEvolution(Object object) {
     }
 }
 ```
+
 Skomplikujmy i dorzućmy "null cases" oraz "gaurded patterns":
+
 ```java
 public static void main(String[] args) {
     switchEvolution("Hello from new switch expression and pattern matching");
@@ -367,11 +456,15 @@ private static void switchEvolution(Object object) {
     }
 }
 ```
-Na początku "łącznikiem" (w java17 jako preview) w wyrazeniu `case` na połączenie "pattern matching" oraz "quarded patterns" 
+
+Na początku "łącznikiem" (w java17 jako preview) w wyrazeniu `case` na połączenie "pattern matching" oraz "quarded
+patterns"
 był `&&`, potem zamieniono na słowo kluczowe `when`. Czy tak się stanie w przypadku `instanceof`? Zobaczymy...
 
 ## Rekordy
+
 Jako "preview" w java14, standard od jdk16, przed:
+
 ```java
 class Person {
     private Long id;
@@ -380,8 +473,11 @@ class Person {
     //generate constructor + setters and getters + hashCode, equals and toString methods
 }
 ```
+
 Pośrednie rozwiązanie: `Lombok`
+
 ```java
+
 @Data
 @AllArgsConstructor
 class Person {
@@ -390,7 +486,8 @@ class Person {
 }
 ```
 
-Jednak wprowadzenie rekordów pozwala na stworzenie niemutowalnych obiektów tej "klasy" 
+Jednak wprowadzenie rekordów pozwala na stworzenie niemutowalnych obiektów tej "klasy"
+
 ```java
 public class Sandbox {
     public static void main(String[] args) {
@@ -400,9 +497,11 @@ public class Sandbox {
     }
 }
 
-record Person(Long id, String username){}
+record Person(Long id, String username) {
+}
 ```
-Również otrzymujemy dostęp do pól, konstruktor z polami klas, metody `equals`, `hashCode` oraz `toString`, a oprócz 
+
+Również otrzymujemy dostęp do pól, konstruktor z polami klas, metody `equals`, `hashCode` oraz `toString`, a oprócz
 tego możemy wprowadzić pole statyczne lub dodatkowe metody:
 
 ```java
@@ -419,15 +518,18 @@ record Person(Long id, String username) implements Personable {
     }
 }
 
-interface Personable{
+interface Personable {
     boolean isHuman();
 }
 ```
-Rekordy są niejawnie (ang. implicitly) finalne (ang. final), czyli nie możemy z nich dziedziczyć oraz one same nie mogą dziedziczyć z klas. 
 
-Do stworzonego rekordu automatycznie przypisywany jest "kanoniczny konstruktor" (ang. canonical constructor) - tak jak w klasie,
-w której nie ma zadeklarowanego konstruktora, dostajemy "domyślny". Jednak może zostać stworzony kompaktowy (ang. compact cannonical constructor),
-sprawdzający niejawnie przypisane parametry:
+Rekordy są niejawnie (ang. implicitly) finalne (ang. final), czyli nie możemy z nich dziedziczyć oraz one same nie mogą
+dziedziczyć z klas.
+
+Do stworzonego rekordu automatycznie przypisywany jest "kanoniczny konstruktor" (ang. canonical constructor) - tak jak w
+klasie, w której nie ma zadeklarowanego konstruktora, dostajemy "domyślny". Jednak może zostać stworzony kompaktowy (
+ang.
+compact cannonical constructor), sprawdzający niejawnie przypisane parametry:
 
 ```java
 Person {
@@ -437,8 +539,9 @@ Person {
 }
 ```
 
-Możemy też przeciążyć konstruktor i podać np. mniejszą liczbę parametrów, ale zostanie pod tym wywołany 
+Możemy też przeciążyć konstruktor i podać np. mniejszą liczbę parametrów, ale zostanie pod tym wywołany
 konstruktor kanoniczny wraz z tym kompaktowym, bo pola są domyślnie finalne:
+
 ```java
 public static void main(String[] args) {
     //Person person = new Person(-1L, "Zbyszko");
@@ -447,8 +550,8 @@ public static void main(String[] args) {
     System.out.println(person);
 }
 
-record Person(Long id, String username)  {
-    
+record Person(Long id, String username) {
+
     // custom constructor
     public Person(Long id) {
         this(id, null);
@@ -464,12 +567,169 @@ record Person(Long id, String username)  {
 ```
 
 ### Rekordy vs Lombok
+
 - Oba rozwiązania eliminują nadmiarowość kodu (ang. boilerplate code)
 - Rekordy są do małych, niemutowalnych klas
-- Dla klas z duzą ilością pól, Lombok może nam wygenerować wzorzec buildera
-- Lombok nam autogeneruje kod wraz ze wzorcami
+- Dla klas z dużą ilością pól, Lombok może wygenerować wzorzec buildera
 - Klasy z adnotacjami Lomboka są mutowalne
-- Rekordy nie wspierają dziedziczenia 
+- Rekordy nie wspierają dziedziczenia
 
-## Klasy `sealed`
-TODO
+## Klasy `sealed` w kontekście dziedziczenia
+- Oznaczając zajęcia jako `final`, zapobiegamy **całkowicie** dziedziczeniu
+- Jednak od java 17, możemy zaimplementować tak zwaną „hierarchię klas zapieczętowanych”:
+  - Klasę, której podklasy chcemy ograniczyć, zaznaczamy słowem kluczowym `sealed`.
+  - Używając słowa kluczowego `permits` podajemy listę dozwolonych podklas.
+
+Implementacja wyjściowa:
+```java
+interface Shapeable {
+}
+
+abstract class Shape implements Shapeable {
+  abstract int getNumberOfSides();
+}
+
+class Circle extends Shape {
+
+  @Override
+  int getNumberOfSides() {
+    return 0;
+  }
+}
+
+class Triangle extends Shape {
+
+  @Override
+  int getNumberOfSides() {
+    return 3;
+  }
+}
+
+class GeometricalOperations {
+  // do nothing
+}
+```
+1. Dodajemy słowo kluczowe `permits` to klasy `Shapeable` i ograniczamy do klasy `Shape`, która powinna się oznaczyć jako `non-sealed`
+2. Zmieniamy przy klasie `Shape` na `sealed` i dodajemy `permits Circle, Triangle`
+3. Oznaczamy klasy `Triangle` i `Cirle` jako `non-sealed` albo `final`
+4. Próbujemy `class GeometricalOperations extends Shape` jednak nie jest na liście dozwolonych klas
+
+### Kontekstowe słowa kluczowe (ang. Contextual Keywords)
+
+Wprowadzenie nowych słów kluczowych, takich jak `sealed`, `non-sealed`, `permits` (lub `switch`) zrodziło wśród
+programistów JDK następujące pytanie: Co powinno się stać z istniejącym kodem, który używa tych słów kluczowych jako
+nazw metod lub zmiennych?
+
+Ponieważ Java przywiązuje dużą wagę do kompatybilności wstecznej, zdecydowano nie wpływać w jak największym stopniu na
+istniejący kod. Jest to możliwe dzięki tak zwanym „kontekstowym słowom kluczowym”, które mają znaczenie tylko w
+określonym kontekście. Zatem `sealed`, `non-sealed`, `permits` mają znaczenie tylko w kontekście definicji klasy.
+
+## Sequence collections
+
+Interfejs `SequencedCollection` dostarcza jednolite metody dostępu do elementów kolekcji ze stabilną kolejnością
+iteracji, są dwie metody `getFirst` i `getLast`.
+Te metody są dostępne dla:
+
+- `List` (np. `ArrayList`, `LinkedList`)
+- `SortedSet` i jego rozszerzenie NavigableSet (np. `TreeSet`)
+- `LinkedHashSet`
+
+Oprócz powyższych metod, `SequencedCollection` definiuje również następujące metody:
+
+- `void addFirst(E)` – wstawia element na początku kolekcji
+- `void addLast(E)` – dołącza element na końcu kolekcji
+- `E removeFirst()` – usuwa pierwszy element i zwraca go
+- `E removeLast()` – usuwa ostatni element i zwraca go
+  W przypadku kolekcji niemutowalnych wszystkie cztery metody zgłaszają wyjątek `UnsupportedOperationException`.
+
+Natomiast metoda `reversed` zwraca widok kolekcji w odwrotnej kolejności. Możemy go użyć do iteracji wstecz po kolekcji.
+
+```java
+public static void main(String[] args) {
+    List<Integer> arrayList = new ArrayList<>();
+    arrayList.add(1);   // List contains: [1]
+
+    arrayList.addFirst(0);  // List contains: [0, 1]
+    arrayList.addLast(2);   // List contains: [0, 1, 2]
+
+    Integer firstElement = arrayList.getFirst();  // 0
+    Integer lastElement = arrayList.getLast();  // 2
+    System.out.printf(" first is %s and the last is %s", firstElement, lastElement);
+
+    List<Integer> reversed = arrayList.reversed();
+    System.out.println(reversed); // Prints [2, 1, 0]
+
+    System.out.println("------------------------------");
+    LinkedHashMap<Integer, String> map = new LinkedHashMap<>();
+
+    map.put(1, "One");
+    map.put(2, "Two");
+    map.put(3, "Three");
+
+    map.firstEntry();   //1=One
+    map.lastEntry();    //3=Three
+
+    System.out.println(map);  //{1=One, 2=Two, 3=Three}
+
+    Map.Entry<Integer, String> first = map.pollFirstEntry();   //1=One
+    Map.Entry<Integer, String> last = map.pollLastEntry();    //3=Three
+
+    System.out.println(map);  //{2=Two}
+
+    map.putFirst(1, "One");     //{1=One, 2=Two}
+    map.putLast(3, "Three");    //{1=One, 2=Two, 3=Three}
+
+    System.out.println(map);  //{1=One, 2=Two, 3=Three}
+    System.out.println(map.reversed());   //{3=Three, 2=Two, 1=One}
+}
+```
+
+## Przykłady dodania adnotacji `@Deprecated` w SDK
+
+- URI (ang. Uniform Resource Identifier) String identyfikujący konkretny zasób w internecie (obrazek, dokument, etc)
+- URL (Uniform Resource Locator) określa kolacje zasobu, podzespół URI
+
+```java
+URL url_deprecated = new URL("http://github.com");
+URL url_new = URI.create("http://github.com").toURL();
+```
+
+## JDK22 - nienazwane zmienne i wzorca (ang. Unnamed Variables & Patterns)
+
+```java
+public static void main(String[] args) {
+    String iAmInteger = "10e";
+    try {
+        int i = Integer.parseInt(iAmInteger);
+        //...
+    } catch (NumberFormatException _) {        // Unnamed variable
+        System.out.println("Bad number: " + iAmInteger);
+    }
+}
+```
+
+Uruchom z terminala: `java --enable-preview --source 22 Sandbox.java`
+
+## Java 21-22 - eksperymentalnie - odchudzenie protokołu uruchomieniowego (ang. launch protocol)
+
+```java
+package com.example;
+
+public class Sandbox {
+    public static void main(String[] args) {
+        String welcomeMsg = "Hey Java Developers! 🙋🏻‍♂️";
+        System.out.println(welcomeMsg);
+    }
+}
+```
+
+Ekspermentalnie, włączając opcje eksperymentalne w IntelliJ:
+
+```java
+void main() {
+    String welcomeMsg = "Hey Java Developers! 🙋🏻‍♂️";
+    System.out.println(welcomeMsg);
+}
+```
+
+Lub z konsoli `java --enable-preview --source 22 Sandbox.java`
